// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoviePoster should renders correctly 1`] = `
<div
  className="movie-card__poster
        false
        false
      "
>
  <img
    alt=" poster"
    height="327"
    src=""
    width="218"
  />
</div>
`;

exports[`MoviePoster should renders correctly big poster 1`] = `
<div
  className="movie-card__poster
        movie-card__poster--big
        false
      "
>
  <img
    alt=" poster"
    height="327"
    src=""
    width="218"
  />
</div>
`;

exports[`MoviePoster should renders correctly small poster 1`] = `
<div
  className="movie-card__poster
        false
        movie-card__poster--small
      "
>
  <img
    alt=" poster"
    height="327"
    src=""
    width="218"
  />
</div>
`;

exports[`MoviePoster should renders correctly with children 1`] = `
Array [
  <div
    className="movie-card__poster
        false
        false
      "
  >
    <img
      alt=" poster"
      height="327"
      src=""
      width="218"
    />
  </div>,
  <div>
    blah-blah
  </div>,
]
`;
